<?xml version="1.0"?>
<package format="3">
  <name>sq2_ccv_roll_pitch_msgs</name>
  <version>0.0.0</version>
  <description>The sq2_ccv_roll_pitch_msgs package</description>

  <maintainer email="pritish.debasis96@gmail.com">pp01</maintainer>
  
  <author>Pritish Tripathy Debasis</author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
